[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/muzzle.png" type="Texture" id=1]
[ext_resource path="res://Sounds/gunshot.mp3" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Guns/Revolver.gd" type="Script" id=3]
[ext_resource path="res://Sprites/revolver.png" type="Texture" id=4]

[node name="Gun" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, -6 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="tip" type="Position2D" parent="."]
position = Vector2( 18, -6 )

[node name="tip2" type="Position2D" parent="."]
position = Vector2( 37, -6 )

[node name="firerate" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="trigger" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="muzzletimer" type="Timer" parent="."]
wait_time = 0.1

[node name="gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Muzzle" type="Sprite" parent="."]
visible = false
modulate = Color( 2, 2, 2, 1 )
position = Vector2( 30, -6 )
scale = Vector2( 0.0833973, 0.0652651 )
texture = ExtResource( 1 )

[connection signal="timeout" from="firerate" to="." method="_on_firerate_timeout"]
[connection signal="timeout" from="trigger" to="." method="_on_trigger_timeout"]
[connection signal="timeout" from="muzzletimer" to="." method="_on_muzzletimer_timeout"]
